--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+   	        <!-- Jakarta Validation API -->
+    		<dependency>
+        		<groupId>jakarta.validation</groupId>
+        		<artifactId>jakarta.validation-api</artifactId>
+        		<version>3.0.2</version>
+    		</dependency>
+    
+    		<!-- Hibernate Validator (implementation for Jakarta Validation) -->
+    		<dependency>
+        		<groupId>org.hibernate.validator</groupId>
+        		<artifactId>hibernate-validator</artifactId>
+        		<version>7.0.5.Final</version>
+    		</dependency>
+
+    		<!-- Spring Boot Starter Validation (optional, for easier configuration) -->
+    		<dependency>
+        		<groupId>org.springframework.boot</groupId>
+        		<artifactId>spring-boot-starter-validation</artifactId>
+    		</dependency>
 	</dependencies>
 
 	<build>
