--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,15 @@
     			<version>5.5.0</version>
     			<scope>test</scope>
 		</dependency>
+		<dependency>
+    			<groupId>org.postgresql</groupId>
+    			<artifactId>postgresql</artifactId>
+    			<version>42.7.1</version>
+		</dependency>
+		<dependency>
+    			<groupId>org.springframework.boot</groupId>
+    			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
