--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=taskify
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskify
+spring.datasource.username=valeriemaccomish
+spring.datasource.password=valeriemaccomish
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA and Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
